--- a/.Github/.workflows/ci.yaml
+++ b/.Github/.workflows/ci.yaml
@@ -1,4 +1,26 @@
-name : CI-WORKFLOW
+name: CI-WORKFLOW
 
-on : [push ,pull_requests]
+on:
+  push:
+  pull_request:
 
+jobs:
+  project_testing:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: DVC repro
+        run: dvc repro
