--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,7 @@
 name: CI-WORKFLOW
 
-on: [push , pull_request]
+on: [push, pull_request]
+
 jobs:
   project_testing:
     runs-on: ubuntu-latest
@@ -18,7 +19,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install dvc[s3]   # ensure DVC S3 support
+
       - name: DVC pull
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         run: dvc pull
+
       - name: DVC repro
-        run: dvc repro -v 
+        run: dvc repro -v
