--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,11 +47,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          
+            
           # DagsHub/MLflow credentials (FIXED!)
           DAGSHUB_TOKEN: ${{ secrets.DAGS_HUB_TOKEN }}
+          MLFLOW_TRACKING_USERNAME: saleemjibran813
           MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGS_HUB_TOKEN }}
+
         run: dvc repro -v
       
       # Optional: Push changes back to DVC
