--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,10 +48,10 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
             
-          # DagsHub/MLflow credentials
+          # DagsHub/MLflow credentials - CORRECTED!
           DAGSHUB_TOKEN: ${{ secrets.DAGS_HUB_TOKEN }}
           MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
-          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGS_HUB_TOKEN }}
+          MLFLOW_TRACKING_USERNAME: saleemjibran813
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGS_HUB_TOKEN }}
 
         run: dvc repro -v
